--- a/sass/partials/_page.scss
+++ b/sass/partials/_page.scss
@@ -310,10 +310,10 @@ footer {
 		margin: 2em 0;
 		// padding-top: 4em;
 	}
-	// .img-half{
-	// @include span-columns(7, 14);
-	// @include nth-omega(2n);
-	// }
+	.img-half{
+	@include span-columns(7, 14);
+	@include nth-omega(2n);
+	}
 
 }
 
